tests/snapshots/examples_fixtures/type_system__failing__84_match_tuple_gap_no_fallback.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/84_match_tuple_gap_no_fallback.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/84_match_tuple_gap_no_fallback.flx:29:1
   |
29 | match t {
   | ^^^^^^^^^
30 |     (1, true) -> 1,
   | ^^^^^^^^^^^^^^^^^^^
31 |     (2, false) -> 2
   | ^^^^^^^^^^^^^^^^^^^
32 | };
   | ^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
